# game-of-life

./: CMakeLists.txt  Doxyfile  README.md  board.c  board.h  game.c  game.h  gamelife  main.c  makefile
board/: CMakeLists.txt  board.c  board.h
documentation/html/: README_8md.html  annotated.html  board_8c.html  board_8h.html  board_8h_source.html  classes.html  files.html  functions.html  functions_vars.html  game_8c.html  game_8h.html  game_8h_source.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8c.html  md_README.html  pages.html  structGameLife-members.html  structGameLife.html
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
game/: CMakeLists.txt  game.c  game.h
