cmake_minimum_required(VERSION 3.0)
cmake_policy(SET CMP0076 NEW)
project(gamelife LANGUAGES C)
add_subdirectory(board)
add_subdirectory(game)
set (SRC main.c)
add_executable(${PROJECT_NAME} "")
target_sources(${PROJECT_NAME} PUBLIC ${SRC})
add_custom_target(dist tar -czvf gameoflife.tar.gz ../main.c ../board ../game ../Doxyfile ../CMakeLists.txt )
add_custom_target(docs doxygen ../Doxyfile)
target_link_libraries(${PROJECT_NAME} PUBLIC console game)
install(TARGETS ${PROJECT_NAME})